# OpenCV_examples

./: README.md
VideoCameraInput/: CMakeLists.txt  README.md  compile.sh  main.cpp
